--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
 
 	<body>
 
+
+	<div id="container">
 		<div id="header">
 			<h1>Webshop MF</h1>
 		</div>
 
 		
-		<nav>
-			<ul>
+		
+			<ul id="menu">
 				<li><a href="#">Home</a></li>
 				<li><a href="#">Laptops</a>
 					<ul>
@@ -33,7 +35,7 @@
 				</li>
 				<li><a href="#">Contact</a></li>
 			</ul>
-		</nav>
+		
 				
 		<div id="section">
 		<p>
@@ -45,7 +47,7 @@
 		</div>
 
 
-
+		</div>
 	</body>
   
   
