Changed menu again
Final version of menu

--- a/index.html
+++ b/index.html
@@ -1,54 +1,32 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Webshop</title>
-	  <link rel="stylesheet" href="CSS/styles.css">
-  </head>
-
-	<body>
-
-
-	<div id="container">
-		<div id="header">
-			<h1>Webshop MF</h1>
-		</div>
-
-		
-		
-			<ul id="menu">
-				<li><a href="#">Home</a></li>
-				<li><a href="#">Laptops</a>
-					<ul>
-						<li><a href="#">Notebooks</a>
-						<li><a href="#">Ultrabook</a></li>
-						<li><a href="#">Macbooks</a></li>
-						<li><a href="#">Gaming</a>
-						<li><a href="#">Chromebooks</a>						
-						</li>
-					</ul>
-				</li>
-				<li><a href="#">Headphones</a>
-					<ul>
-						<li><a href="#">On-ear</a></li>
-						<li><a href="#">Over-ear</a></li>
-					</ul>
-				</li>
-				<li><a href="#">Contact</a></li>
-			</ul>
-		
-				
-		<div id="section">
-		<p>
-		First paragraph
-		</p>
-		<p>
-		Second paragraph
-		</p>
-		</div>
-
-
-		</div>
-	</body>
-  
-  
+<head>
+<title>Webshop</title>
+<link rel="stylesheet" type="text/css" href="CSS/MenuStyle.css">
+<body>
+<div id="menucontainer">
+    <ul id="hmenu">
+        <li class="parent_menu"><a href="#">Home</a></li>
+        <li class="parent_menu"><a href="#">Laptops</a>
+            <ul>
+                <li class="child_menu"><a href="#">Notebooks</a></li>
+                <li class="child_menu"><a href="#">Ultrabooks</a></li>
+                <li class="child_menu"><a href="#">2 in 1 - devices</a></li>
+                <li class="child_menu"><a href="#">Macbooks</a></li>
+                <li class="child_menu"><a href="#">Chromebooks</a></li>                
+            </ul>
+        </li>
+        <li class="parent_menu"><a href="#">Headphones</a>
+            <ul>
+                <li class="child_menu"><a href="#">On-ear</a></li>
+                <li class="child_menu"><a href="#">Over-ear</a></li>
+                <li class="child_menu"><a href="#">In-ear</a></li>
+            </ul>
+        </li>
+        <li class="parent_menu"><a href="#">Accessoires</a></li>
+        <li class="parent_menu"><a href="#">Contact Us</a></li>
+    </ul>
+</div>
+</body>
+</head>
 </html>
