--- a/index.html
+++ b/index.html
@@ -3,7 +3,20 @@
 <head>
 <title>Webshop</title>
 <link rel="stylesheet" type="text/css" href="CSS/MenuStyle.css">
+<link rel="stylesheet" type="text/css" href="CSS/Stylesheet.css">
 <body>
+
+<div id="headercontainer">
+    
+    <div align="center" id="headertekst">
+        Webshop1
+    </div>
+
+    <div id="cart">
+    </div>
+
+</div>
+
 <div id="menucontainer">
     <ul id="hmenu">
         <li class="parent_menu"><a href="#">Home</a></li>
