Added notebooks.html + started centerContent

--- a/notebooks.html
+++ b/notebooks.html
@@ -46,16 +46,22 @@
 
 <div id="centerContent">
 	
-	<div class="title_welcome">Welcome to the webshop</div>
+	<div class="title_welcome">Notebooks</div>
         <div class="welcome_box">
             <p class="welcome">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sed rhoncus nulla. Vestibulum porta vulputate lacus nec ultricies. Cras tortor orci, viverra at libero eu, ultrices cursus nisi. Nulla ante nunc, viverra eu ornare ac, aliquam sit amet nunc. Nullam id risus a lectus venenatis dictum eget vel libero. Vivamus non scelerisque lorem, in imperdiet enim. Phasellus laoreet ipsum eu sapien dignissim egestas.
+                On this part of website, you'll find different types of notebooks from several brands.
 			</p> 
         </div>
 
-        <div class="ad"><b>On sale product here</b></div>
 
-        <div class="ad"><b>Popular product here</b></div>
+        <div class="categories">
+            List of categories
+        </div>
+
+        <div class="items">
+            List of items
+        </div>
+
 
 </div>
 
