Change HMTL to PHP
Index.html is now Index.php
Notebook.html is now Notebook.php
Menu, Header and footer are now separate php-files

--- a/index.html
+++ b/index.html
@@ -8,15 +8,9 @@
 
 <div id="header">
     
-    <div class="logo">Webshop</div> 
-
-    <div class="searchbox">
-	    <form>
-			<span><input type="text" class="search" placeholder="Search..."></span>
-		</form>
-    </div>
-
-    <div class="shoppingCart"><a href="shoppingCart.html">Shopping cart</a></div>
+    <?php            
+        include "header.php";                 // (2) Include the header
+    ?>
 
 </div>
 
@@ -42,6 +36,7 @@
         <li class="parent_menu"><a href="#">Accessoires</a></li>
         <li class="parent_menu"><a href="#">Contact Us</a></li>
     </ul>
+
 </div>
 
 <div id="centerContent">
